[package]
name = "disk-utility"
version = "0.1.0"
authors = ["Amila Welihinda <amilajack@gmail.com>"]
edition = "2018"
license = "MIT"
exclude = ["index.node"]

[lib]
name = "disk_utility"
crate-type = ["cdylib"]

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]


[dependencies]
diskus = "0.6.0"
num_cpus = "1.13"
humansize = "1.1"
