[package]
name = "disk-utility"
version = "0.1.0"
authors = ["Amila Welihinda <amilajack@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "disk_utility"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
neon = "0.3.3"
diskus = "0.5.0"
num_cpus = "1.0"
humansize = "1.1"
