[package]
name = "disk-utility"
version = "0.1.0"
authors = ["Amila Welihinda <amilajack@gmail.com>"]
edition = "2018"
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "disk_utility"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
diskus = "0.5.0"
num_cpus = "1.13"
humansize = "1.1"
